[package]
name = "security-toolkit"
version = "0.1.0"
edition = "2021"
authors = ["Hans Eric Luiz Jingryd <tidynest@proton.me>"]
description = "A comprehensive CLI security toolkit for password validation, file hashing, and network scanning"
repository = "https://github.com/tidynest/security-toolkit"
license = "MIT"
readme = "README.md"
keywords = ["security", "cli", "password", "hashing", "scanning"]
categories = ["command-line-utilities", "cryptography", "development-tools"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
dns-lookup = "2.1.0"
hex = "0.4.3"
indicatif = "0.18.0"
md-5 = "0.10.6"
rand = "0.9.2"
regex = "1.11.1"
rpassword = "7"
sha2 = "0.10.9"
sha3 = "0.10.8"
zxcvbn = "3.1.0"
