[package]
name = "security-toolkit"
version = "0.1.0"
edition = "2024"
authors = ["Hans Eric Luiz Jingryd <tidynest@proton.me>"]
description = "A comprehensive CLI security toolkit for password validation, file hashing, and network scanning"
repository = "https://github.com/tidynest/security-toolkit"
license = "MIT"
readme = "README.md"
keywords = ["security", "cli", "password", "hashing", "scanning"]
categories = ["command-line-utilities", "cryptography", "development-tools"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dns-lookup = "3.0.1"
hex = "0.4.3"
indicatif = "0.18.4"
md-5 = "0.11.0"
rand = "0.10.1"
regex = "1.12.3"
rpassword = "7.4.0"
sha2 = "0.11.0"
sha3 = "0.11.0"
zxcvbn = "3.1.0"
tempfile = "3.27.0"
